--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,8 @@
-<h1>
-    {{title}}
-</h1>
+<h1>{{title}}</h1>
+<form method="GET" action="/login">
+    <button>Login</button>
+</form>
+
+<form method="GET" action="/register">
+    <button>Register</button>
+</form>
